==> kossnikita/at32-ssd1306/src/ssd1306.c <==
#include "ssd1306.h"
#include <math.h>
#include <stdlib.h>
#include <string.h>  // For memcpy

void ssd1306_Reset(void) { /* for I2C - do nothing */ }

void ssd1306_WriteCommand(uint8_t byte) {
#if I2C_VERSION == 1
  /* wait for the busy flag to be reset */
  while (i2c_flag_get(SSD1306_I2C_PORT, I2C_BUSYF_FLAG) != RESET);
  /* ack acts on the current byte */
  i2c_master_receive_ack_set(SSD1306_I2C_PORT, I2C_MASTER_ACK_CURRENT);

  /* send slave address */
  /* generate start condtion */
  i2c_start_generate(SSD1306_I2C_PORT);
  /* wait for the start flag to be set */
  while (i2c_flag_get(SSD1306_I2C_PORT, I2C_STARTF_FLAG) == RESET);
  /* send slave address */
  i2c_7bit_address_send(SSD1306_I2C_PORT, SSD1306_I2C_ADDR,
                        I2C_DIRECTION_TRANSMIT);
  /* wait for the addr7 flag to be set */
  while (i2c_flag_get(SSD1306_I2C_PORT, I2C_ADDR7F_FLAG) == RESET);
  /* clear addr flag */
  i2c_flag_clear(SSD1306_I2C_PORT, I2C_ADDR7F_FLAG);
  /* wait for the tdbe flag to be set */
  while (i2c_flag_get(SSD1306_I2C_PORT, I2C_TDBE_FLAG) == RESET);
  /* send memory address */
  i2c_data_send(SSD1306_I2C_PORT, 0x00);
  /* wait for the tdbe flag to be set */
  while (i2c_flag_get(SSD1306_I2C_PORT, I2C_TDBE_FLAG) == RESET);
  /* send data */
  i2c_data_send(SSD1306_I2C_PORT, byte);
  /* wait for the tdc flag to be set */
  while (i2c_flag_get(SSD1306_I2C_PORT, I2C_TDC_FLAG) == RESET);
  i2c_stop_generate(SSD1306_I2C_PORT);
#elif I2C_VERSION == 2
  /* wait for the busy flag to be reset */
  while (i2c_flag_get(SSD1306_I2C_PORT, I2C_BUSYF_FLAG) != RESET);
  /* start transfer */
  i2c_transmit_set(SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 1, I2C_AUTO_STOP_MODE,
                   I2C_GEN_START_WRITE);
  /* wait for the tdis flag to be set */
  while (i2c_flag_get(SSD1306_I2C_PORT, I2C_TDIS_FLAG) == RESET);
  /* send memory address */
  i2c_data_send(SSD1306_I2C_PORT, 0x00);
  /* wait for the tdis flag to be set */
  while (i2c_flag_get(SSD1306_I2C_PORT, I2C_TDIS_FLAG) == RESET);
  /* send data */
  i2c_data_send(SSD1306_I2C_PORT, byte);
  /* wait for the stop flag to be set  */
  while (i2c_flag_get(SSD1306_I2C_PORT, I2C_STOPF_FLAG) == RESET);
  /* clear stop flag */
  i2c_flag_clear(SSD1306_I2C_PORT, I2C_STOPF_FLAG);
  /* reset ctrl2 register */
  SSD1306_I2C_PORT->ctrl2 &= ~0x01FF17FF;
#endif
}

void ssd1306_WriteData(uint8_t* buffer, size_t buff_size) {
#if I2C_VERSION == 1
  /* wait for the busy flag to be reset */
  while (i2c_flag_get(SSD1306_I2C_PORT, I2C_BUSYF_FLAG) != RESET);
  /* ack acts on the current byte */
  i2c_master_receive_ack_set(SSD1306_I2C_PORT, I2C_MASTER_ACK_CURRENT);

  /* send slave address */
  /* generate start condtion */
  i2c_start_generate(SSD1306_I2C_PORT);
  /* wait for the start flag to be set */
  while (i2c_flag_get(SSD1306_I2C_PORT, I2C_STARTF_FLAG) == RESET);
  /* send slave address */
  i2c_7bit_address_send(SSD1306_I2C_PORT, SSD1306_I2C_ADDR,
                        I2C_DIRECTION_TRANSMIT);
  /* wait for the addr7 flag to be set */
  while (i2c_flag_get(SSD1306_I2C_PORT, I2C_ADDR7F_FLAG) == RESET);
  /* clear addr flag */
  i2c_flag_clear(SSD1306_I2C_PORT, I2C_ADDR7F_FLAG);
  /* wait for the tdbe flag to be set */
  while (i2c_flag_get(SSD1306_I2C_PORT, I2C_TDBE_FLAG) == RESET);
  /* send memory address */
  i2c_data_send(SSD1306_I2C_PORT, 0x40);
  while (buff_size > 0) {
    /* wait for the tdbe flag to be set */
    while (i2c_flag_get(SSD1306_I2C_PORT, I2C_TDBE_FLAG) == RESET);
    /* send data */
    i2c_data_send(SSD1306_I2C_PORT, *buffer++);
    buff_size--;
  }
  while (i2c_flag_get(SSD1306_I2C_PORT, I2C_TDC_FLAG) == RESET);
  i2c_stop_generate(SSD1306_I2C_PORT);
#elif I2C_VERSION == 2
  /* wait for the busy flag to be reset */
  while (i2c_flag_get(SSD1306_I2C_PORT, I2C_BUSYF_FLAG) != RESET);
  /* start transfer */
  i2c_transmit_set(SSD1306_I2C_PORT, SSD1306_I2C_ADDR, buff_size + 1,
                   I2C_AUTO_STOP_MODE, I2C_GEN_START_WRITE);
  /* wait for the tdis flag to be set */
  while (i2c_flag_get(SSD1306_I2C_PORT, I2C_TDIS_FLAG) == RESET);
  /* send memory address */
  i2c_data_send(SSD1306_I2C_PORT, 0x40);
  while (buff_size > 0) {
    /* wait for the tdis flag to be set */
    while (i2c_flag_get(SSD1306_I2C_PORT, I2C_TDIS_FLAG) == RESET);
    /* send data */
    i2c_data_send(SSD1306_I2C_PORT, *buffer++);
    buff_size--;
  }
  /* wait for the stop flag to be set  */
  while (i2c_flag_get(SSD1306_I2C_PORT, I2C_STOPF_FLAG) == RESET);
  /* clear stop flag */
  i2c_flag_clear(SSD1306_I2C_PORT, I2C_STOPF_FLAG);
  /* reset ctrl2 register */
  SSD1306_I2C_PORT->ctrl2 &= ~0x01FF17FF;
#endif
}

void ssd1306_Reset(void) {
  // CS = High (not selected)
  gpio_bits_write(SSD1306_CS_Port, SSD1306_CS_Pin, TRUE);

  // Reset the OLED
  gpio_bits_write(SSD1306_Reset_Port, SSD1306_Reset_Pin, FALSE);
  ssd1306_Delay(10);
  gpio_bits_write(SSD1306_Reset_Port, SSD1306_Reset_Pin, TRUE);
  ssd1306_Delay(10);
}

void ssd1306_WriteCommand(uint8_t byte) {
  gpio_bits_write(SSD1306_CS_Port, SSD1306_CS_Pin, FALSE);  // select OLED
  gpio_bits_write(SSD1306_DC_Port, SSD1306_DC_Pin, FALSE);  // command
  while (spi_i2s_flag_get(SSD1306_SPI_PORT, SPI_I2S_TDBE_FLAG) == RESET);
  spi_i2s_data_transmit(SSD1306_SPI_PORT, (uint16_t)byte);
  gpio_bits_write(SSD1306_CS_Port, SSD1306_CS_Pin,
                  TRUE);  // un-select OLED
}

void ssd1306_WriteData(uint8_t* buffer, size_t buff_size) {
  gpio_bits_write(SSD1306_CS_Port, SSD1306_CS_Pin, FALSE);  // select OLED
  gpio_bits_write(SSD1306_DC_Port, SSD1306_DC_Pin, TRUE);   // data
  for (uint32_t i = 0; i < buff_size; i++) {
    while (spi_i2s_flag_get(SSD1306_SPI_PORT, SPI_I2S_TDBE_FLAG) == RESET);
    spi_i2s_data_transmit(SSD1306_SPI_PORT, (uint16_t)buffer[i]);
  }
  gpio_bits_write(SSD1306_CS_Port, SSD1306_CS_Pin, TRUE);  // un-select OLED
}
